FIX scrolling bar issue and rendering on small screen

--- a/src/css/medium-screen.css
+++ b/src/css/medium-screen.css
@@ -1,45 +1,52 @@
 @media screen and (max-width: 991px) {
-    .logoimg {
-        width: 132px;
-        height: 20px;
+    .fixed-top{
+        display: flex;
+        justify-content: space-between;
+        background: #f72210;
+    }
+
+	.logoimg {
+		width: 132px;
+		height: 20px;
         left: 100px;
-        top: 10px;
-    }
+		top: 10px;
+	}
 
-    .fa-bars {
+	.fa-bars {
         color: #fff;
-    }
+	}
 
-    #navscroll {
+	#navscroll {
         padding: 3px 0;
-    }
+        margin-right: 2%;
+	}
 
-    .datenav {
-        display: none;
-    }
+	#datenav {
+		display: none;
+	}
 
-    #signin {
-        font-size: 14px;
-        bottom: 0;
-    }
+	#signin {
+		font-size: 14px;
+		bottom: 0px;
+	}
 
-    #signin a {
-        padding: 6px;
-    }
+	#signin a {
+		padding: 6px;
+	}
 
-    .fa-chevron-right {
-        display: none !important;
-    }
+	.fa-chevron-right {
+		display: none !important;
+	}
 
-    .header-bottom {
-        display: none;
-    }
+	.header-bottom {
+		display: none;
+	}
 
-    #right-col {
-        margin: auto;
+	#right-col {
+		margin: auto;
     }
 
     .content {
-        padding-top: 40px;
+		padding-top: 40px;
     }
 }
